# Project-2a---Team-Dorf

./: CMakeLists.txt  Food.h  HashMap.h  README.md  Trie.h  app.js  index.html  main.cpp  styles.css
cpp/: CMakeLists.txt
cpp/include/: CSVReader.h  Food.h
cpp/src/: main.cpp
web/: index.html
web/assets/: styles.css
web/js/: app.js
